# geip

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
data/: demo_facts.parquet
geip/analytics/: engine.py  reconcile.py
geip/connectors/: base.py  eia.py  ember.py  owid.py
geip/core/: schema.py
scripts/: build_demo_cache.py  run_reconciliation.py
spec/: GLOBAL_ENERGY_PLATFORM.md
tests/: spine_world_electricity_2024.json  test_eia_connector.py  test_ember_connector.py  test_reconciliation.py  test_spine.py
