[project]
name = "geip"
version = "0.1.0"
description = "Global Energy Intelligence Platform — multi-source energy data harmonization and decision support"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "duckdb>=0.10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
ui = ["streamlit>=1.30"]
schedule = ["prefect>=2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
